--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-emerald-700 text-white;
+  @apply bg-white text-zinc-900;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,5 +12,46 @@ body {
 @layer base {
   html {
     font-family: Poppins, Dancing Script, Bebas Neue;
+  }
+}
+
+@layer components {
+  .button {
+    @apply relative font-medium text-lg tracking-wider rounded-xl bg-gradient-to-r from-emerald-700 to-teal-200 p-2 text-center overflow-hidden text-white;
+  }
+  .button span {
+    @apply relative transition duration-500
+  }
+
+  .button::before,
+  .button::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+  }
+
+  .button::before {
+    @apply bg-zinc-900;
+
+    content: "";
+    width: 120%;
+    left: -10%;
+    transform: skew(30deg);
+    transition: transform .5s cubic-bezier(0.3, 1, 0.8, 1);
+  }
+
+  .button:hover::before {
+    transform: translate3d(100%, 0, 0);
+  }
+
+  .button:active {
+    transform: scale(0.95);
+  }
+
+  .fixed {
+    @apply fixed top-auto bottom-0;
   }
 }
